--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -25,7 +25,7 @@ jobs:
           git archive --prefix=proctor/ -o proctor.zip $stashName
           git rm --cache -r vendor
       - name: Create Release
-        if: github.event_name != ‘pull_request’
+        if: github.event_name != 'pull_request'
         id: create_release
         uses: actions/create-release@v1
         env:
@@ -36,7 +36,7 @@ jobs:
           draft: false
           prerelease: false
       - name: Upload Release Asset
-        if: github.event_name != ‘pull_request’
+        if: github.event_name != 'pull_request'
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
         env:
